--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TextCraft</string>
+    <string name="this_is_heading">Use Coins placeholder in Heading</string>
 </resources>
